# VISPLearning

./: CMakeListsConfigure.txt  README.md  testGitgubConnection.txt
CameraCalibration/: CMakeLists.txt
ImageDisplay/: CMakeLists.txt  tutorial-image-display.cpp  tutorial-viewer.cpp
ImageFiltering/: CMakeLists.txt  tutorial-image-filter.cpp
ImageGrabbing/opencv/: CMakeLists.txt  tutorial-grabber-opencv.cpp
ImageGrabbing/realsense/: CMakeLists.txt  tutorial-grabber-realsense.cpp
ImageGrabbing/v4l2/: CMakeLists.txt  tutorial-grabber-v4l2.cpp
ImageGrabbing/videoreader/: CMakeLists.txt  readme.md  readme.txt  tutorial-video-reader-images.cpp  tutorial-video-reader-video.cpp  tutorial-video-reader.cpp
ImageProcessing/: CMakeLists.txt  tutorial-autothreshold.cpp  tutorial-brightness-adjustment.cpp  tutorial-connected-components.cpp  tutorial-contour.cpp  tutorial-contrast-sharpening.cpp  tutorial-count-coins.cpp  tutorial-flood-fill.cpp
Image_Manipulation/: CMakeLists.txt  testDisplays.cpp  tutorial-viewer.cpp
Tracking/BlobTracking/: CMakeLists.txt  readme.txt  tutorial-blob-tracker-live-v4l2.cpp
Tracking/KeyPointTracking/: CMakeLists.txt  tutorial-klt-tracker-live-v4l2.cpp  tutorial-klt-tracker.cpp
Tracking/ModelBasedTracking/RBGCamera/: CMakeLists.txt  tutorial-mb-generic-tracker-live.cpp  tutorial-mb-generic-tracker.cpp
Tracking/ModelBasedTracking/RGBDCamera/: CMakeLists.txt
Tracking/MovingEdgesTracking/: CMakeLists.txt  tutorial-me-line-tracker.cpp
started/: CMakeLists.txt  tutorial-viewer.cpp
test/: CMakeLists.txt  test.cpp
